--- a/child.html
+++ b/child.html
@@ -20,7 +20,7 @@
     }
   </style>
 </head>
-<body style="background-color: #1e90ff;">
+<body style="background-color: #83ff1e;">
   <h1>Welcome to the Child Page</h1>
   <p>This page is displayed inside an iframe of the parent page.</p>
 </body>
