--- a/child.html
+++ b/child.html
@@ -22,6 +22,6 @@
 </head>
 <body style="background-color: #83ff1e;">
   <h1>Welcome to the Child Page is that first time </h1>
-  <p>This page is displayed inside an iframe of the parent page.</p>
+  <p>I edit this page through childPage branch </p>
 </body>
 </html>
